// file: proto/gcommon/v1/database/schema/revert_migration_request.proto
// version: 1.0.0
// guid: 02d407f4-a362-4009-b8be-dc47f6588d24

edition = "2023";

package database.v1;

import "commonpb/v1/request_metadata.proto";
import "google/protobuf/go_features.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/databasepb";

message RevertMigrationRequest {
  // Database name to apply the reversion to
  string database = 1 [(buf.validate.field).string.min_len = 1];

  // Target migration version to revert to
  string target_version = 2 [(buf.validate.field).string.pattern = "^v?\\d+\\.\\d+\\.\\d+"];

  // Request metadata for tracing and authentication
  common.v1.RequestMetadata metadata = 3 [lazy = true];
}
