// file: pkg/db/proto/responses/list_migrations_response.proto
// version: 1.0.0
// guid: 2d1040e2-056b-4264-8f84-d731b345d924

edition = "2023";

package gcommon.v1.database;

import "db/proto/migration_info.proto";
import "google/protobuf/go_features.proto";
import "pkg/db/proto/migration_info.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/pkg/db/proto";

/**
 * ListMigrationsResponse returns a list of migrations for a database.
 */
message ListMigrationsResponse {
  // List of migration metadata entries
  repeated MigrationInfo migrations = 1 [lazy = true];
}
