// file: pkg/db/proto/responses/revert_migration_response.proto
// version: 1.0.0
// guid: 93e7bf68-8691-4063-91b7-247a1dad6e67

edition = "2023";

package gcommon.v1.database;

import "pkg/common/proto/protobuf/go_features.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/db/proto;dbpb";
option features.(pb.go).api_level = API_OPAQUE;

/**
 * RevertMigrationResponse indicates the result of a migration reversion.
 */
message RevertMigrationResponse {
  // Whether the migration was reverted successfully
  bool success = 1;

  // Version that the database was reverted to
  string reverted_to = 2;

  // Error information if the revert failed
  gcommon.v1.common.Error error = 3 [lazy = true];
}
